--- a/src/component/Dashboard.css
+++ b/src/component/Dashboard.css
@@ -8,32 +8,34 @@
   
   .main{
     display: flex;
-    height:'100vh';width:'100vw';
+    height:100vh;
+    width:100vw;
     background-color: red;
     overflow: hidden;
   }
   .rightside{
-    height: 100vh;
     width: 85%;
     background-color: #F4F7FE;
+    
     /* background-color: blue; */
+    overflow: hidden;
   }
 
   .con{
     width: 100;
-   
+    height: 100%;
     /* border: solid green; */
     height: 100%;
     /* background-color: #FF975C; */
-  }
-
-  .allbody{
+    }
+    
+    .allbody{
+    padding: 0px 20px;
     overflow-y: scroll;
-    height: 92%;
-    padding-left: 1.5%;
+    height: 90%;
     -ms-overflow-style: none;  
     scrollbar-width: none;
-    /* background-color: #4318FF; */
+    /* background-color: #ff18e8; */
   }
 
   .allbody::-webkit-scrollbar {
@@ -145,7 +147,6 @@
   
   .theme{
     display: flex;
-    height: 7%; 
     padding: 0.3% 0%;
     width: 6.875%; 
     border: 1px solid #A3AED0 ;
@@ -154,20 +155,20 @@
     box-shadow: 3px 1px 25.2px 0px #7090B014;
     justify-content: center;
     gap:18%; /* 26px/1920px */
+    align-items: center;
   }
   
   .header1{
+    height: 10%;
+    /* background-color: #0B1437; */
     display: flex;
-    padding: 1% 0%;
-    /* justify-content: space-between; */
     gap: 75.90184%;
-    
-    /* margin-bottom: 20px; */
+    align-items: center;
   }
   
   .Dash{
     margin-left: 2%;
-    font-size: 34px;
+    font-size: 28px;
     font-weight: 450;
     color: #2B3674;
     /* font-family: 'DM Sans'; */
@@ -196,8 +197,10 @@
    
   .dashboardgraph1
   {
-    height: 80%;
+    height: 100%;
+    width: 100%;
     display: flex;
+    align-items: center;
   }
   
   
@@ -215,20 +218,13 @@
   }
   .dashboardgra
   {
-    display: flex;
-    /* width: 100%; */
-    /* min-height: 40%; */
     border-radius: 20px;
     background-color: #FFFFFF;
-    padding-top: 2%;
-    /* gap: 40%; */
-    padding-bottom: 4%;
-    margin-bottom: 2%;
+    padding: 2%;
   }
    .graph1details
   {
     text-align: center;
-    margin-top: 4%;
   }
  
   .dashboardpointdet
@@ -240,7 +236,7 @@
     text-align: center;
     padding: 20px;
     border-radius: 20px;
-    margin-top: 10%;
+    /* margin-top: 10%; */
     margin-left: 40px;   
   }
   
@@ -286,13 +282,10 @@
   
   .rpcardcontainer
   {
-    margin-top: 1%;
+    padding: 20px;
     background-color: #FDFDFD;
     /* background-color: #2B3674; */
-    width: 100%;
     border-radius: 20px;
-    height: 35%;
-    padding-bottom: 1%;
   }
   .rpline
   {
@@ -433,7 +426,6 @@
     background-color: #FDFDFD;
     border-radius: 10px;
     display: block;
-    /* min-width: 40% !important; */
     justify-content: center;
     text-align: space-between;
     padding: 25px 30px; 
@@ -456,15 +448,13 @@
     display: flex;
     justify-content: center;
     gap: 10px;
-    padding-right: 20px;
-
-    margin-top: 10% 0px;
   }
 
 
   /* detailedpoint */
   .detailedpointbox
   {
+    height: 100%;
     background-color: #FDFDFD;
     width: 38.104167%; /* 578px/1920 */
     border-radius: 20px;
@@ -555,6 +545,8 @@
   .pointdetbutton
   {
     height: 48px;
+    margin-top: 20px;
+    border-left: none;
     justify-content: center;
     align-items: center;
     width: 227px;
@@ -562,9 +554,11 @@
     font-weight: bold;
     display: flex;
     border-left: none;
-    border: 1px solid #2B36744D ;
+    border-top: 1px solid #2B36744D ;
+    border-bottom: 1px solid #2B36744D ;
+    border-right: 1px solid #2B36744D ;
     gap: 5%;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     background-color: #F4F7FE;
     border-radius: 0px 10px 10px 0px;
   }
@@ -578,7 +572,18 @@
 
   .r Table{
     width: 80%;
-    margin: 5% 10%;
+    margin-top: 16px;
+  }
+
+  .dark-mode .rightside
+  {
+    background-color: #0B1437;
+  }
+
+  .r{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
   }
 
   .dark-mode .dashboardgra, .dark-mode .rpcardcontainer, .dark-mode .table1,
@@ -587,7 +592,7 @@
     background-color: #1A1D26;
     color: #FEFCF8;
   }
-.dark-mode .theme{
+.dark-mode .theme , .dark-mode .con {
   background-color: #0B1437;
 }
   .dark-mode .secondyearcolor, .dark-mode .pointdetailcolor, .dark-mode .pointdetail,
