--- a/src/component/table.css
+++ b/src/component/table.css
@@ -1,17 +1,15 @@
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    border-left: 1px solid #dddddd;
-    border-right: 1px solid #dddddd;
+    border: 1px solid #dddddd;
 }
 td,
 th {
     border-bottom: 1px solid #dddddd;
     text-align: left;
-    padding: 10px;  
+    padding: 10px;
 }
 th{
-    background-color: #dddddd;
+    color: #2B3674;
+    background-color: #F4F7FE;
 }
-
-
