--- a/src/component/pointconttable.css
+++ b/src/component/pointconttable.css
@@ -41,7 +41,7 @@
     color: #FEFCF8;
   }
   
-  .dark-mode .value, .dark-mode .myeventtexdescr{
+  .dark-mode .value, .dark-mode .myeventtexdescr,.dark-mode .Dash-pt{
     color: #DEE6FF;
   }
   
