--- a/src/component/table.css
+++ b/src/component/table.css
@@ -3,13 +3,100 @@ table {
     border-collapse: collapse;
     border: 1px solid #dddddd;
 }
-td,
-th {
+td {
     border-bottom: 1px solid #dddddd;
     text-align: left;
     padding: 10px;
 }
 th{
+    border-bottom: 1px solid #dddddd;
     color: #2B3674;
+    padding: 10px;
+    text-align: left;
     background-color: #F4F7FE;
 }
+
+
+
+
+/* rubics.css */
+.rubicsheet {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* background-color: yellow ; */
+  }
+
+  .thofrubic{
+    border-bottom: 1px solid #dddddd;
+    color: #2B3674;
+    padding: 10px;
+    text-align: center;
+    background-color: #F4F7FE;    
+  }
+  
+  .table-layout {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    max-height: 200px; 
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+  }
+  
+  .rubictable {
+    border-collapse: collapse;
+    width: 97%;
+    justify-content: center;
+  }
+    
+  tfoot {
+    font-weight: bold;
+  }
+  
+  .name-rubic {
+    background-color: transparent;
+    width: 100%;
+    border: none;
+    text-align: center;
+  }
+  
+  .add-button, .trash-button-bot, .save-button-bot {
+    margin: 10px ;
+    border: none;
+    cursor: pointer;
+    height: 35px;
+    width: 90px;
+    border-radius: 4px;
+    font-size: 14px;
+  }
+  
+  .add-button {
+    background-color: blue;
+    color: white;
+  }
+
+  .button-out{    
+    display: flex;
+    justify-content: end;
+  }
+  
+  .trash-button-bot {
+    background-color: #f44336;
+    color: white;
+  }
+  
+  .save-button-bot {
+    background-color: #02c87f;
+    color: white;
+  }
+  
+  .button-group-bot {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+  }
