--- a/src/App.css
+++ b/src/App.css
@@ -443,3 +443,50 @@ a {
     color: #33ffea;
   }
 }
+
+
+.main-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  justify-content: center; /* Center the cards horizontally */
+  padding: 20px;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  height: 85vh;
+  /* background-color: cadetblue; */
+}
+
+.card {
+  max-width: 300px; /* Set a maximum width for the cards */
+  background-color: #f0f0f0;
+  height: 300px;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card .image {
+  height: 150px;
+}
+
+.card .details {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card .stepper {
+  height: 30px;
+}
+
+.card .status {
+  padding: 16px;
+  text-align: center;
+  font-weight: bold;
+  color: #2B3674;
+}
