--- a/src/Student/Dashboard.css
+++ b/src/Student/Dashboard.css
@@ -22,12 +22,11 @@
   }
 
   .con{
-    width: 100;
+    width: 100%;
     height: 100%;
-    /* border: solid green; */
-    height: 100%;
-    /* background-color: #FF975C; */
     }
+
+  
     
     .allbody{
     padding: 0px 20px;
@@ -35,7 +34,14 @@
     height: 90%;
     -ms-overflow-style: none;  
     scrollbar-width: none;
-    /* background-color: #ff18e8; */
+  }
+
+  .allbody-rep{
+    padding: 0px 20px;
+    overflow-y: scroll;
+    height: 90%;
+    -ms-overflow-style: none;  
+    scrollbar-width: none;
   }
 
   .allbody::-webkit-scrollbar {
@@ -163,8 +169,9 @@
   .header1{
     height: 10%;
     /* background-color: #0B1437; */
+    width: 98%;
     display: flex;
-    gap: 77.4%;
+    justify-content: space-between;
     align-items: center;
   }
   
@@ -360,46 +367,11 @@
     gap: 10%;
     width: 50%;
   }
-  
-  
-  /* notification */
-  .logs-popup {
-    position:absolute ; 
-    top: 10%;
-    left: 42%;
-    width:23%;
-    height: 80%;
-    background: #FDFDFD;
-    /* background-color: red; */
-    border: 1px solid none;
-    border-radius: 8px;
-  }
 
-  .noti1{
-    display: flex;
-    gap: 7px;
-    margin-left: 20px;
-    margin-top: 10px;
-  }
-
-  .bellicon{
-    color: #FF975C;
-    transform: rotate(-15deg);
-    margin-top: 5px;
-  }
-
-  .logs{
-    color:#2B3674;
-    font-weight: 500;
-    font-size: 20px;
-    
-  }
-
-  .search-bar{
+  .search-bar-fal {
     height: 40px;
-    width: 70%;
-    margin-top: 20px;
-    border: 1px solid #d7d8da ;
+    width: 50%;
+    border: 1px solid #d7d8da;
     border-radius: 10px;
     display: flex;
     gap: 5px;
@@ -407,14 +379,61 @@
     background-color: #F4F7FE;
   }
 
-  /* .l{
-    position: relative;
-    background-color: gray;
-    height: 100vh;
-    width: 100vw;
-  } */
+  .search-bar-fal-rep {
+    height: 40px;
+    width: 60%;
+    border: 1px solid #d7d8da;
+    border-radius: 10px;
+    display: flex;
+    gap: 5px;
+    padding-left: 10px;
+    background-color: #F4F7FE;
+  }
 
-  .bar{
+  
+  
+
+  /* notification */
+  .logs-popup {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #FDFDFD;
+    border-radius: 8px;
+  }
+  
+  .noti1 {
+    display: flex;
+    gap: 7px;
+    margin-left: 20px;
+    margin-top: 10px;
+  }
+  
+  .bellicon {
+    color: #FF975C;
+    transform: rotate(-15deg);
+    margin-top: 5px;
+  }
+  
+  .logs {
+    color: #2B3674;
+    font-weight: 500;
+    font-size: 20px;    
+  }
+  
+  .search-bar {
+    height: 40px;
+    width: 70%;
+    margin-top: 20px;
+    border: 1px solid #d7d8da;
+    border-radius: 10px;
+    display: flex;
+    gap: 5px;
+    padding-left: 10px;
+    background-color: #F4F7FE;
+  }
+  
+  .bar {
     border: none;
     font-size: 16px;
     width: 90%;
@@ -423,78 +442,80 @@
     align-self: center;
     background-color: #F4F7FE;
   }
-
-  .search-bar::placeholder{
-    color: #2B3674;
-    font-weight: 500;
-    border: none;
-  }
-
+  
   .bar:focus {
     border: none;
     outline: none;
   }
-
-  .notilist{
-    /* background-color: #0B1437; */
-    padding: 20px 20px;
+  
+  .notilist {
+    padding: 20px;
     gap: 30px;
     display: block;
     overflow-y: scroll;
-    height: 530px;
+    height: 500px;
   }
-
-  .notiitems{
-    height: 50px;
-    width: 100%;
-    /* background-color: #9e9898; */
-    justify-content: space-between;
+  
+  .notiitems {
     display: flex;
-    overflow: hidden;    
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #E6E6E6;
   }
-
-  .photoss{
-    height: 100%;
-    width: 20%;
-    /* background-color: white; */
+  
+  .icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
   }
-
-  .notimes{
+  
+  .icon-container.event-created-successfully {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  .icon-container.attendance-pending {
+    background-color: #FFC107;
+    color: white;
+  }
+  
+  .icon-container.event-approval-rejected {
+    background-color: #F44336;
+    color: white;
+  }
+  
+  .notimes {
     display: flex;
     flex-direction: column;
-    /* background-color: #0033ff; */
-    width: 54%;
-    height: 100%;
-    align-items: start;
-    justify-content: space-between;
+    width: 100%;
   }
-
-  .notipop{
-    height: 100%;
-    width: 20%;
-    /* background-color: white; */
-  }
-
-  .impname{  
+  
+  .impname {  
     font-size: 17px;
     font-weight: 600;
   }
-
-  .impname1{  
+  
+  .impname1 {  
     font-size: 13px;
     font-weight: 600;
     color: #A3AED0;
   }
-
-  .notilist::-webkit-scrollbar {
-    display: none;
+  
+  .description {
+    font-size: 12px;
+    color: #777;
   }
   
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .notilist {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+  .date-header {
+    font-size: 14px;
+    font-weight: bold;
+    color: #2B3674;
+    margin-bottom: 10px;
   }
+  
 
   .table1, .table2{
     background-color: #FDFDFD;
@@ -673,6 +694,14 @@
     background-color: #1A1D26;
     color: #FEFCF8;
   }
+/* it need to chenged */
+  .dark-mode tr:nth-child(even) {
+    background-color: #1A1D26;
+  }
+/* it need to chenged */
+  .dark-mode .points-table table tr:nth-child(even) {
+    background-color: #1A1D26;
+  }
 .dark-mode .theme , .dark-mode .con, .dark-mode .search-bar,.dark-mode .bar, .dark-mode .notiitems, .dark-mode .search-bar-em1
  {
   background-color: #181C26;
@@ -774,7 +803,7 @@
     color: #0B1437;
     font-weight: 600;
     font-size: 19px;
-    width: 20%;
+    width: 40%;
   }
   
   .box-tt{
@@ -1088,7 +1117,6 @@
   .form-group {
     width: 100%;
     padding-bottom: 19px;
-    height: 48%;
   }
   
   .form-label {
@@ -1255,3 +1283,126 @@
     border-radius: 10px;
     height: 50px;
   }
+
+
+
+
+
+  .departmecont
+{
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.deptconttool
+{
+  display: flex;
+  gap: 10%;
+  width: 60%;
+  border-radius: 5px;
+  padding: 5% 30%;
+  background-color:#F4F7FE;
+  border: 0.5px solid grey;
+}
+
+.deptconttool ::placeholder
+{
+  color: gray;
+}
+
+.headerdept
+{
+  height: 12%;
+  align-items: center;
+  display: flex;
+}
+.deptconttool:focus
+{
+  outline: none;
+}
+.depttablhead
+{
+  background-color: #dfdfdf;
+  display: flex;
+  height: 10%;
+  width: 100%;
+  border-radius: 10px 10px 0px 0px;
+  align-items: center;
+  gap: 50%;
+  justify-content: center;
+}
+
+.large-checkbox
+{
+  height: 17px;
+  width: 17px;
+}
+
+.depttablsel
+{
+  display: flex;
+  width: 40%;
+  border-radius: 10px 10px 10px 0px;
+  font-size: 20px;
+}
+
+.deptrow{
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  overflow-y: hidden;
+  display: flex;
+  overflow-x: scroll;
+  -ms-overflow-style: none;  
+  border-bottom: 1px solid rgb(175, 175, 175);
+  scrollbar-width: none; 
+}
+
+.checkboxcont
+{
+  display: flex;
+  gap: 10%;
+  margin: 0% 9%;
+  width: 30%;
+  font-size: 19px;
+}
+
+.derptbuton
+{
+  display: flex;
+  height: 25%;
+  justify-content: center;
+  align-items: center;
+  gap: 20%;
+  width: 100%;
+}
+
+
+.derptbutontrash, .derptbutonsave
+{
+  color: #F4F7FE;
+  border: none;
+  font-weight: 600;
+  border-radius: 5px;
+  padding: 8px 20px;
+}
+
+.derptbutontrash
+{
+  background-color: #f53f3f;
+}
+
+.derptbutonsave
+{
+  background-color: #03a86b;
+}
+
+.points-table table {
+  width: 100%;
+}
+
+
+.points-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
