--- a/src/Student/Eventmasters.css
+++ b/src/Student/Eventmasters.css
@@ -2,7 +2,7 @@
     height: 10%;
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 98%;
   }
 .close-button{
   border: none;
@@ -82,6 +82,26 @@
     height: 40px;
     margin-left: 20px;
     width: 12.5%;
+    border: 1px solid #d7d8da ;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    background-color: #F4F7FE;
+  }
+
+  .search-bar-em1-rep{
+    height: 40px;
+    width: 20%;
+    border: 1px solid #d7d8da ;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    background-color: #F4F7FE;
+  }
+
+  .search-bar-em1-rep1{
+    height: 40px;
+    width: 30%;
     border: 1px solid #d7d8da ;
     border-radius: 10px;
     display: flex;
@@ -359,3 +379,29 @@
     color: #DEE6FF;
   }
   
+  .mainfalcol{
+    height: 90%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    overflow-y: scroll;
+    padding-left: 2%;
+    scrollbar-width: none;
+    /* background-color: #4318FF; */
+  }
+  
+  .itsrow1{
+    width: 96%;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: #338b25; */
+    height: 40%;
+    margin-bottom: 2%;
+  }
+  
+  .obj1{
+    height: 100%;
+    width: 24%;
+    background-color: white;
+    border-radius: 10px;
+  }
