--- a/src/App.css
+++ b/src/App.css
@@ -490,3 +490,68 @@ a {
   font-weight: bold;
   color: #2B3674;
 }
+
+
+.adminnavi
+ {
+  height: 100%;
+  width: 62%;
+  display: flex;
+  border-radius: 10px;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid #d7d8da;
+ }
+
+ .adminline {
+  background-color: #4318FF;
+  height: 70%;
+  width: 3px;
+  border-radius: 5px;
+  transition: opacity 0.3s ease; 
+}
+
+.hidden {
+  opacity: 0;
+  transform: all 0.5s;
+  pointer-events: none; 
+}
+
+ .adminnavbutcon
+ {
+   height: 100%;
+   align-items: center;
+   justify-content: center;
+   display: flex;
+   border-radius: 5px;
+   width: 25%;
+  }
+  
+  .adminnavbut
+  {
+  background-color: #F4F7FE;
+  width: 100%;
+  height: 100%;
+  border: none;
+  font-size: 17px;
+  font-weight: 600;
+  outline: none;
+  border-radius: 10px;
+ }
+
+.selected {
+  transition: ease 0.5s;
+  background-color: #4318FF; 
+  color: #FFFFFF;
+}
+
+.search-bar-fal-rep-1 {
+  height: 100%;
+  width: 35%;
+  border: 1px solid #d7d8da;
+  border-radius: 10px;
+  display: flex;
+  gap: 5px;
+  padding-left: 10px;
+  background-color: #F4F7FE;
+}
