--- a/src/Student/Dashboard.css
+++ b/src/Student/Dashboard.css
@@ -767,9 +767,9 @@
   }
 
   .below-header{
-    height: 90%;
+    height: 85%;
     padding: 0px 2%;
-    overflow: hidden;
+    /* overflow: hidden; */
     }
     
     .inside-below{
